--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -17,12 +17,21 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: Cache NPM
+      uses: actions/cache@v3
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+
+    - name: Install Dependencies
+      run: npm install
+
     - name: Build
-      run: |
-        npm install
-        npx webpack
+      run: npm run build
