--- a/package.json
+++ b/package.json
@@ -1,22 +1,39 @@
 {
-  "name": "devpersona-portfolio",
+  "name": "devspark-portfolio",
   "version": "1.0.0",
-  "private": true,
+  "description": "Interactive developer portfolio with dynamic projects, skills, dark mode, and animations.",
+  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/devspark-portfolio.git"
+  },
+  "keywords": [
+    "portfolio",
+    "nextjs",
+    "tailwindcss",
+    "framer-motion",
+    "react"
+  ],
+  "author": "Ankit Kumar",
+  "license": "MIT",
   "dependencies": {
-    "next": "^14.3.0",
+    "autoprefixer": "^10.4.14",
+    "framer-motion": "^10.12.16",
+    "next": "^13.6.12",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "framer-motion": "^10.12.16",
-    "tailwindcss": "^3.3.3"
+    "react-icons": "^4.10.1",
+    "tailwindcss": "^3.3.4"
   },
   "devDependencies": {
-    "eslint": "^8.49.0",
-    "eslint-config-next": "^14.3.0"
+    "eslint": "^8.46.0",
+    "eslint-config-next": "^13.6.12"
   }
 }
